syntax = "proto3";

package watermark;

option go_package = "github.com/watermarker/proto/watermark;watermarkpb";

service WatermarkService {
  rpc ApplyWatermark(ApplyWatermarkRequest) returns (ApplyWatermarkResponse);
}

message ApplyWatermarkRequest {
  string text = 1;
  int32 size = 2;
}

message ApplyWatermarkResponse {
  string image_url = 1;
}
